--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
     <h1 class="logo">MOOFS</h1>
     <h2>Ka daawo Filmo, Musalsalo oo Xiiso iyo Xaraabo leh </h2>
     <p>Nagu soo biir sii aad u daabato filimada soomaliga, hindiga io americanka</p>
-    <form action="html/moofs.html" method="post" id="email-signup" class="email-signup">
-        <input id="email" name="email" type="email" placeholder="Gali Gmailkada..." required>
-        <button type="submit">Ku taabo</button>
+    <a href="html/moofs.html"><button type="submit">Ku taabo</button></a>
+        
 		
     </form>
 		<!-- <button class="btn-guest" type="button"><a href="moofs.html">View Full Site <i class='bx bx-right-arrow-circle'></i></a></button> -->
